release: bump version to release 0.3.0
## 概述
本次版本为项目从 Closed Beta 迈向正式开源的关键里程碑版本。全新上线超级管理员后台、激活码系统、官网落地页，全面升级系统安全与可运维能力，并完成 AGPL-3.0 开源协议与仓库公开准备。

## 主要变更

### 新增功能
- **超级管理员后台**
  - 仪表盘：数据概览与统计卡片，实时掌握系统运行状态
  - 用户管理：查看、搜索、创建、禁用/启用用户，分配初始密码
  - 操作日志审计：全链路 HTTP 请求日志查询与追踪
  - 系统配置管理：动态调整公告、注册开关、密钥激活要求等全局配置
  - 重要通知广播：一键向全部用户广播通知，支持幂等校验
  - 激活码管理：批量生成、查询、回收与销毁用户激活密钥
- **激活码系统**
  - 支持 `sys_activation_key` 表存储与管理密钥
  - 普通用户注册后可输入激活码完成账号激活
  - 激活要求可通过系统配置动态开关，适配内测与邀请制场景
- **官网落地页（Landing Page）**
  - 全新官方展示页面，涵盖产品亮点、核心功能、技术栈与内测申请入口
  - `/` 根路径由登录页重定向改为落地页，品牌感更强
- **系统动态配置**
  - `sys_config` key-value 配置表，支持热更新
  - 涵盖系统公告、注册开放、密钥激活要求等配置项
- **操作日志审计**
  - `LogInterceptor` 增强，请求信息异步持久化至 `sys_oper_log`
  - 支持 traceId、用户ID、请求方法、URI、耗时、状态码等全字段记录
- **首次登录强制改密**
  - `SysUser` 新增 `password_updated_at` 字段
  - 管理员创建/重置密码后，用户首次登录强制修改，提升账号安全
- **自动初始化机制**
  - `AdminAccountInitializer`：首次部署自动创建超级管理员
  - `SysRoleInitializer`：首次部署自动初始化预设角色
  - `BizSystemDataInitializer`：首次部署自动初始化冰箱类型等基础数据
  - 均支持通过环境变量与配置文件控制开关
- **前端 Markdown 编辑器**
  - 引入 `md-editor-v3`，管理员后台支持富文本内容编辑

### 优化改进
- **注册体验升级**：注册成功后直接返回 JWT Token，前端自动登录，无需二次请求
- **用户首页增强**：数据卡片与功能入口布局优化，信息展示更清晰
- **前端组件目录重构**：按功能域分为 `brand/`、`form/`、`layout/`、`ui/`、`tour/` 等，架构更清晰
- **CORS 跨域增强**：支持 `cors.allowed-origins` 多域名配置
- **默认头像更新**：由 `bot` 更新为 `ice`
- **通知中心增强**：新增「重要通知」类型与统计展示
- **JWT Token 增强**：Payload 新增 `activated` 声明，前端可感知用户激活状态

### 工程维护
- **开源准备**
  - 添加 `LICENSE`（AGPL-3.0）
  - 全面重写 `README.md`，包含项目简介、功能特性、技术栈、项目结构、界面预览
  - `pom.xml` 补充开源协议、开发者信息、SCM 链接
- **多环境配置**：新增 `application-dev.yaml` 与 `application-prod.yaml`
- **版本号同步**：后端 `pom.xml` release 0.3.0，前端 `package.json` 0.3.0，`application.yaml` 构建时间 20260604-01
- **后端端口调整**：默认端口 8080 → 8081
- **数据库脚本更新**：补充后台管理、激活码、配置、日志、通知等新增表

## 影响范围
- 后端：新增 Admin*、ActivationKey*、SysConfig、SysOperLog、SysImportantNotice 等大量模块；改造 Auth、User、Notification、System 等现有模块；新增多个 Initializer 与配置文件
- 前端：新增 LandingView、多个 Admin 后台页面、Markdown 编辑器组件；重构组件目录结构；改造路由、布局、用户首页、关于页面等
- 数据库：新增 `sys_activation